; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_feth_config.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_feth_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@FALSE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@KEV_DL_LINK_ON = common dso_local global i32 0, align 4
@KEV_DL_LINK_OFF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @feth_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @feth_config(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %11 = load i32, i32* @FALSE, align 4
  store i32 %11, i32* %5, align 4
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %6, align 4
  store i32 0, i32* %7, align 4
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %8, align 8
  %13 = call i32 (...) @feth_lock()
  %14 = load i32*, i32** %3, align 8
  %15 = call %struct.TYPE_4__* @ifnet_get_if_fake(i32* %14)
  store %struct.TYPE_4__* %15, %struct.TYPE_4__** %8, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %17 = icmp eq %struct.TYPE_4__* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32, i32* @EINVAL, align 4
  store i32 %19, i32* %7, align 4
  br label %81

20:                                               ; preds = %2
  %21 = load i32*, i32** %4, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %58

23:                                               ; preds = %20
  %24 = load i32*, i32** %4, align 8
  %25 = call %struct.TYPE_4__* @ifnet_get_if_fake(i32* %24)
  store %struct.TYPE_4__* %25, %struct.TYPE_4__** %9, align 8
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %27 = icmp eq %struct.TYPE_4__* %26, null
  br i1 %27, label %28, label %30

28:                                               ; preds = %23
  %29 = load i32, i32* @EINVAL, align 4
  store i32 %29, i32* %7, align 4
  br label %81

30:                                               ; preds = %23
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %32 = call i64 @feth_is_detaching(%struct.TYPE_4__* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %48, label %34

34:                                               ; preds = %30
  %35 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %36 = call i64 @feth_is_detaching(%struct.TYPE_4__* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %48, label %38

38:                                               ; preds = %34
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = load i32*, i32** %40, align 8
  %42 = icmp ne i32* %41, null
  br i1 %42, label %48, label %43

43:                                               ; preds = %38
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 0
  %46 = load i32*, i32** %45, align 8
  %47 = icmp ne i32* %46, null
  br i1 %47, label %48, label %50

48:                                               ; preds = %43, %38, %34, %30
  %49 = load i32, i32* @EBUSY, align 4
  store i32 %49, i32* %7, align 4
  br label %81

50:                                               ; preds = %43
  %51 = load i32*, i32** %4, align 8
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 0, i32 0
  store i32* %51, i32** %53, align 8
  %54 = load i32*, i32** %3, align 8
  %55 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %56 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %55, i32 0, i32 0
  store i32* %54, i32** %56, align 8
  %57 = load i32, i32* @TRUE, align 4
  store i32 %57, i32* %5, align 4
  br label %80

58:                                               ; preds = %20
  %59 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %60 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %59, i32 0, i32 0
  %61 = load i32*, i32** %60, align 8
  %62 = icmp ne i32* %61, null
  br i1 %62, label %63, label %79

63:                                               ; preds = %58
  %64 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %65 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %64, i32 0, i32 0
  %66 = load i32*, i32** %65, align 8
  store i32* %66, i32** %4, align 8
  %67 = load i32*, i32** %4, align 8
  %68 = call %struct.TYPE_4__* @ifnet_get_if_fake(i32* %67)
  store %struct.TYPE_4__* %68, %struct.TYPE_4__** %10, align 8
  %69 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %70 = icmp eq %struct.TYPE_4__* %69, null
  br i1 %70, label %71, label %73

71:                                               ; preds = %63
  %72 = load i32, i32* @EINVAL, align 4
  store i32 %72, i32* %7, align 4
  br label %81

73:                                               ; preds = %63
  %74 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %75 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %74, i32 0, i32 0
  store i32* null, i32** %75, align 8
  %76 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %77 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %76, i32 0, i32 0
  store i32* null, i32** %77, align 8
  %78 = load i32, i32* @TRUE, align 4
  store i32 %78, i32* %6, align 4
  br label %79

79:                                               ; preds = %73, %58
  br label %80

80:                                               ; preds = %79, %50
  br label %81

81:                                               ; preds = %80, %71, %48, %28, %18
  %82 = call i32 (...) @feth_unlock()
  %83 = load i32, i32* %5, align 4
  %84 = icmp ne i32 %83, 0
  br i1 %84, label %85, label %92

85:                                               ; preds = %81
  %86 = load i32*, i32** %3, align 8
  %87 = load i32, i32* @KEV_DL_LINK_ON, align 4
  %88 = call i32 @interface_link_event(i32* %86, i32 %87)
  %89 = load i32*, i32** %4, align 8
  %90 = load i32, i32* @KEV_DL_LINK_ON, align 4
  %91 = call i32 @interface_link_event(i32* %89, i32 %90)
  br label %103

92:                                               ; preds = %81
  %93 = load i32, i32* %6, align 4
  %94 = icmp ne i32 %93, 0
  br i1 %94, label %95, label %102

95:                                               ; preds = %92
  %96 = load i32*, i32** %3, align 8
  %97 = load i32, i32* @KEV_DL_LINK_OFF, align 4
  %98 = call i32 @interface_link_event(i32* %96, i32 %97)
  %99 = load i32*, i32** %4, align 8
  %100 = load i32, i32* @KEV_DL_LINK_OFF, align 4
  %101 = call i32 @interface_link_event(i32* %99, i32 %100)
  br label %102

102:                                              ; preds = %95, %92
  br label %103

103:                                              ; preds = %102, %85
  %104 = load i32, i32* %7, align 4
  ret i32 %104
}

declare dso_local i32 @feth_lock(...) #1

declare dso_local %struct.TYPE_4__* @ifnet_get_if_fake(i32*) #1

declare dso_local i64 @feth_is_detaching(%struct.TYPE_4__*) #1

declare dso_local i32 @feth_unlock(...) #1

declare dso_local i32 @interface_link_event(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
